--- a/OnToology/PublicTransport.owl/documentation/PublicTransport.owl.widoco.conf
+++ b/OnToology/PublicTransport.owl/documentation/PublicTransport.owl.widoco.conf
@@ -1,6 +1,6 @@
 
 abstract=The abstract of your ontology goes here. 
-ontologyTitle=
+ontologyTitle= Vocabulario de prueba
 ontologyPrefix=[Ontology NS Prefix]
 ontologyNamespaceURI=null
 ontologyName=
@@ -9,7 +9,7 @@ latestVersionURI=
 previousVersionURI=
 dateOfRelease=
 ontologyRevisionNumber=
-licenseURI=null
+licenseURI=http://creativecommons.org/licenses/by/4.0/
 licenseName=null
 licenseIconURL=null
 citeAs=
@@ -19,7 +19,7 @@ publisher=null
 publisherURI=null
 publisherInstitution=null
 publisherInstitutionURI=null
-authors=
+authors= Paola Espinoza (OEG)
 authorsURI=
 authorsInstitution=
 authorsInstitutionURI=
